
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct misc_io_sync_param {int para_size_in; int para_size_out; void* para_out; void* para_in; } ;


 int HIFI_MISC_IOCTL_WRITE_PARAMS ;
 int O_RDWR ;
 int free (void*) ;
 int ioctl (int,int ,struct misc_io_sync_param*) ;
 void* malloc (int) ;
 int open (char*,int ) ;

int main(int arg, char **argv)
{
 int fd;
 void *in = malloc(300 * 1024);
 void *out = malloc(100);
 struct misc_io_sync_param poc;

 poc.para_in = in;
 poc.para_size_in = 300 * 1024;
 poc.para_out = out;
 poc.para_size_out = 100;

 fd = open("/dev/hifi_misc", O_RDWR);

 ioctl(fd, HIFI_MISC_IOCTL_WRITE_PARAMS, &poc);

 free(in);
 free(out);

 return 0;
}
